@@ -3,6 +3,8 @@ package com.hoppinzq.agent.tool.compact;
 import com.anthropic.client.AnthropicClient;
 import com.anthropic.models.messages.*;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.hoppinzq.agent.session.SessionManager;
+import com.hoppinzq.agent.session.TranscriptRecord;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.BufferedWriter;
@@ -11,6 +13,8 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -20,7 +24,18 @@ import java.util.stream.Collectors;
 import static com.hoppinzq.agent.constant.AIConstants.*;
 
 /**
- * 上下文压缩器 - 三层压缩策略
+ * 上下文压缩器 - 四层压缩策略
+ *
+ * 压缩流程（参考Python s08设计）：
+ * - L1: snip_compact      — 裁掉中间消息（消息数 > 50）
+ * - L2: micro_compact     — 旧tool_result替换为占位符（保留最近3条）
+ * - L3: tool_result_budget — 持久化大输出到磁盘（单次消息 > 30KB）
+ * - L4: auto_compact      — LLM完整摘要（token超阈值）
+ * - Emergency: reactive_compact — API返回prompt_too_long时触发
+ *
+ * 核心原则：cheap first, expensive last
+ * 执行顺序：budget → snip → micro → auto
+ *
  * @author hoppinzq
  */
 @Slf4j
@@ -28,14 +43,425 @@ public class ContextCompactor {
     private final AnthropicClient client;
     private final String model;
     private final ObjectMapper mapper = new ObjectMapper();
+    private final SessionManager sessionManager;
 
-    public ContextCompactor(AnthropicClient client, String model) {
+    public ContextCompactor(AnthropicClient client, String model, SessionManager sessionManager) {
         this.client = client;
         this.model = model;
+        this.sessionManager = sessionManager;
     }
 
     /**
-     * Layer 1: 微压缩 - 工具结果选择性替换
+     * 兼容旧版本构造函数（不使用 SessionManager）
+     */
+    public ContextCompactor(AnthropicClient client, String model) {
+        this(client, model, null);
+    }
+
+    // ============================== L1: snip_compact ==============================
+    /**
+     * L1: snip_compact — 裁掉中间消息（消息数超过50条时）
+     *
+     * 功能说明：
+     * - 保留头部 KEEP_HEAD 条消息（初始上下文）
+     * - 保留尾部消息（当前工作）
+     * - 中间全部裁掉，替换为占位符
+     * - 特殊处理：不能把 assistant(tool_use) 和后面的 user(tool_result) 拆开
+     *
+     * 执行时机：
+     * - 每次LLM调用前检查消息数
+     * - 当消息数 > MAX_MESSAGES 时触发
+     *
+     * @param messages 原始消息列表
+     * @return 压缩后的消息列表
+     */
+    public List<MessageParam> snipCompact(List<MessageParam> messages) {
+        if (messages.size() <= MAX_MESSAGES) {
+            return messages;
+        }
+
+        // 计算保留的头部和尾部
+        int headEnd = KEEP_HEAD;
+        int tailStart = messages.size() - (MAX_MESSAGES - KEEP_HEAD);
+
+        // 边界条件1：不能把 assistant(tool_use) 和后面的 user(tool_result) 拆开
+        if (headEnd > 0 && _messageHasToolUse(messages.get(headEnd - 1))) {
+            while (headEnd < messages.size() && _isToolResultMessage(messages.get(headEnd))) {
+                headEnd++;
+            }
+        }
+
+        // 边界条件2：尾部起点也不能拆开 tool_use 和 tool_result
+        if (tailStart > 0 && tailStart < messages.size()
+                && _isToolResultMessage(messages.get(tailStart))
+                && _messageHasToolUse(messages.get(tailStart - 1))) {
+            tailStart--;
+        }
+
+        // 如果边界处理后头尾重叠，返回原消息列表
+        if (headEnd >= tailStart) {
+            return messages;
+        }
+
+        int snipped = tailStart - headEnd;
+
+        // 构建压缩后的消息列表：头部 + 占位符 + 尾部
+        List<MessageParam> newMessages = new ArrayList<>(messages.subList(0, headEnd));
+        newMessages.add(MessageParam.builder()
+                .role(MessageParam.Role.USER)
+                .content("[已省略 " + snipped + " 条对话历史消息]")
+                .build());
+        newMessages.addAll(messages.subList(tailStart, messages.size()));
+
+        System.out.printf("\u001b[95m[snip compact]\u001b[0m 裁掉 %d 条消息（保留头部 %d 条）%n",
+                snipped, KEEP_HEAD);
+
+        return newMessages;
+    }
+
+    // ============================== L3: tool_result_budget ==============================
+    /**
+     * L3: tool_result_budget — 持久化大输出到磁盘
+     *
+     * 功能说明：
+     * - 检查最后一条消息中的所有 tool_result
+     * - 如果总字节数超过 MAX_BYTES_PER_MESSAGE，则持久化大的结果
+     * - 按大小排序，优先持久化最大的结果
+     * - 将持久化的结果替换为占位符，包含文件路径和预览
+     *
+     * 执行时机：
+     * - 每次 tool_result 追加后检查
+     * - 在 snip_compact 和 micro_compact 之后执行
+     *
+     * @param messages 原始消息列表
+     * @return 压缩后的消息列表
+     */
+    public List<MessageParam> toolResultBudget(List<MessageParam> messages) {
+        if (messages.isEmpty()) {
+            return messages;
+        }
+
+        // 获取最后一条消息
+        MessageParam last = messages.get(messages.size() - 1);
+
+        // 检查是否是用户消息且包含 tool_result
+        if (!_isToolResultMessage(last)) {
+            return messages;
+        }
+
+        // 收集所有 tool_result 块
+        List<ToolResultInfo> toolResults = new ArrayList<>();
+        if (last.content().isBlockParams()) {
+            List<ContentBlockParam> contents = last.content().asBlockParams();
+            for (int i = 0; i < contents.size(); i++) {
+                ContentBlockParam block = contents.get(i);
+                if (block.isToolResult()) {
+                    toolResults.add(new ToolResultInfo(messages.size() - 1, i, block.toolResult().get()));
+                }
+            }
+        }
+
+        // 计算总字节数
+        long totalBytes = 0;
+        for (ToolResultInfo info : toolResults) {
+            totalBytes += _getContentLength(info.result());
+        }
+
+        if (totalBytes <= MAX_BYTES_PER_MESSAGE) {
+            return messages;
+        }
+
+        // 按大小排序（大到小）
+        toolResults.sort((a, b) -> Long.compare(_getContentLength(b.result()), _getContentLength(a.result())));
+
+        // 创建新的消息列表（复制）
+        List<MessageParam> newMessages = new ArrayList<>(messages);
+        MessageParam newLast = last;
+
+        // 需要重建消息
+        boolean needRebuild = true;
+        List<ContentBlockParam> newBlocks = new ArrayList<>();
+
+        // 处理每个 tool_result
+        long currentTotal = totalBytes;
+        for (ToolResultInfo info : toolResults) {
+            if (currentTotal <= MAX_BYTES_PER_MESSAGE) {
+                // 已经降到阈值以下，直接保留原始块
+                if (last.content().isBlockParams()) {
+                    newBlocks.add(last.content().asBlockParams().get(info.partIdx()));
+                }
+                break;
+            }
+
+            ToolResultBlockParam result = info.result();
+            long contentLength = _getContentLength(result);
+
+            if (contentLength <= PERSIST_THRESHOLD) {
+                // 小于持久化阈值，保留原始内容
+                if (last.content().isBlockParams()) {
+                    newBlocks.add(last.content().asBlockParams().get(info.partIdx()));
+                }
+                continue;
+            }
+
+            // 持久化到磁盘
+            String originalContent = _extractContentString(result);
+            String persistedContent = _persistLargeOutput(result.toolUseId(), originalContent);
+
+            // 创建替换的占位符块
+            ToolResultBlockParam newResult = ToolResultBlockParam.builder()
+                    .toolUseId(result.toolUseId())
+                    .content(persistedContent)
+                    .isError(false)
+                    .build();
+
+            newBlocks.add(ContentBlockParam.ofToolResult(newResult));
+
+            // 更新总字节数
+            currentTotal = currentTotal - contentLength + persistedContent.length();
+        }
+
+        // 重建最后一条消息
+        if (needRebuild && !newBlocks.isEmpty()) {
+            MessageParam.Content newContent = MessageParam.Content.ofBlockParams(newBlocks);
+            newMessages.set(newMessages.size() - 1, MessageParam.builder()
+                    .role(MessageParam.Role.USER)
+                    .content(newContent)
+                    .build());
+        }
+
+        System.out.printf("\u001b[95m[budget compact]\u001b[0m 持久化 %d 个大工具结果%n",
+                toolResults.size());
+
+        return newMessages;
+    }
+
+    // ============================== Emergency: reactive_compact ==============================
+    /**
+     * 紧急压缩 - 当API返回prompt_too_long时触发
+     *
+     * 功能说明：
+     * - 保存完整对话记录到磁盘
+     * - 生成对话摘要
+     * - 保留首条用户消息 + 最近 KEEP_RECENT 条消息
+     * - 中间用摘要替换
+     *
+     * 执行时机：
+     * - API返回prompt_too_long错误时
+     * - 作为最后的紧急手段
+     *
+     * @param messages 原始消息列表
+     * @return 压缩后的消息列表
+     */
+    public List<MessageParam> reactiveCompact(List<MessageParam> messages) {
+        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME);
+
+        try {
+            // 步骤1：保存完整对话记录
+            String transcriptPath = _saveTranscriptToDisk(messages);
+
+            // 步骤2：生成摘要
+            String summary = _generateSummary(messages);
+
+            // 步骤3：构建压缩后的消息列表
+            List<MessageParam> newMessages = new ArrayList<>();
+
+            // 保留首条用户消息（如果存在）
+            if (!messages.isEmpty()) {
+                MessageParam first = messages.get(0);
+                String roleStr = first._role().toString();
+                if (roleStr.contains("user") || roleStr.contains("USER")) {
+                    newMessages.add(first);
+                }
+            }
+
+            // 添加摘要消息
+            newMessages.add(MessageParam.builder()
+                    .role(MessageParam.Role.USER)
+                    .content("[紧急压缩以释放上下文]\n\n完整记录: " + transcriptPath + "\n\n" + summary)
+                    .build());
+
+            // 保留最近 KEEP_RECENT 条消息
+            int tailStart = Math.max(0, messages.size() - KEEP_RECENT);
+
+            // 边界条件：不能拆开 tool_use 和 tool_result
+            if (tailStart > 0 && tailStart < messages.size()
+                    && _isToolResultMessage(messages.get(tailStart))
+                    && _messageHasToolUse(messages.get(tailStart - 1))) {
+                tailStart--;
+            }
+
+            newMessages.addAll(messages.subList(tailStart, messages.size()));
+
+            System.out.printf("\u001b[95m[reactive compact]\u001b[0m 保留首条 + 最近 %d 条，省略中间 %d 条%n",
+                    KEEP_RECENT, messages.size() - newMessages.size());
+
+            return newMessages;
+
+        } catch (Exception e) {
+            System.err.println("紧急压缩失败: " + e.getMessage());
+            // 失败时返回原始消息列表
+            return messages;
+        }
+    }
+
+    // ============================== 辅助方法 ==============================
+
+    /**
+     * 判断消息是否包含 tool_use
+     */
+    private boolean _messageHasToolUse(MessageParam msg) {
+        String roleStr = msg._role().toString();
+        if (!roleStr.contains("assistant") && !roleStr.contains("ASSISTANT")) {
+            return false;
+        }
+
+        if (!msg.content().isBlockParams()) {
+            return false;
+        }
+
+        for (ContentBlockParam block : msg.content().asBlockParams()) {
+            if (block.isToolUse()) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    /**
+     * 判断消息是否包含 tool_result
+     */
+    private boolean _isToolResultMessage(MessageParam msg) {
+        String roleStr = msg._role().toString();
+        if (!roleStr.contains("user") && !roleStr.contains("USER")) {
+            return false;
+        }
+
+        if (!msg.content().isBlockParams()) {
+            return false;
+        }
+
+        for (ContentBlockParam block : msg.content().asBlockParams()) {
+            if (block.isToolResult()) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    /**
+     * 获取 tool_result 的内容长度
+     */
+    private long _getContentLength(ToolResultBlockParam result) {
+        return _extractContentString(result).length();
+    }
+
+    /**
+     * 从 ToolResultBlockParam 中提取内容字符串
+     */
+    private String _extractContentString(ToolResultBlockParam result) {
+        // content() 返回 Optional<ToolResultBlockParam.Content>
+        // 直接使用 toString() 获取内容字符串
+        if (result.content().isPresent()) {
+            Object content = result.content().get();
+            // 尝试转换为字符串
+            if (content instanceof String) {
+                return (String) content;
+            }
+            // 其他类型，转换为字符串
+            return content.toString();
+        }
+        return "";
+    }
+
+    /**
+     * 持久化大输出到磁盘
+     */
+    private String _persistLargeOutput(String toolUseId, String output) {
+        try {
+            // 创建 tool-results 目录
+            Path toolResultsDir = Paths.get(ROOT, ".task_outputs", "tool-results");
+            Files.createDirectories(toolResultsDir);
+
+            // 保存到文件
+            Path filePath = toolResultsDir.resolve(toolUseId + ".txt");
+            if (!Files.exists(filePath)) {
+                Files.write(filePath, output.getBytes());
+            }
+
+            // 返回占位符
+            String preview = output.length() > 2000 ? output.substring(0, 2000) : output;
+            return String.format(
+                    "<persisted-output>\n完整输出: %s\n预览:\n%s\n</persisted-output>",
+                    filePath, preview
+            );
+        } catch (IOException e) {
+            System.err.println("持久化工具结果失败: " + e.getMessage());
+            return "[工具结果持久化失败: " + e.getMessage() + "]";
+        }
+    }
+
+    /**
+     * 保存对话记录到磁盘
+     */
+    private String _saveTranscriptToDisk(List<MessageParam> messages) throws IOException {
+        Path transcriptDir = Paths.get(ROOT, ".transcripts");
+        Files.createDirectories(transcriptDir);
+
+        String timestamp = String.valueOf(System.currentTimeMillis());
+        Path filePath = transcriptDir.resolve("transcript_" + timestamp + ".jsonl");
+
+        List<String> lines = new ArrayList<>();
+        for (MessageParam msg : messages) {
+            lines.add(mapper.writeValueAsString(msg));
+        }
+        Files.write(filePath, lines);
+
+        return filePath.toString();
+    }
+
+    /**
+     * 生成对话摘要
+     */
+    private String _generateSummary(List<MessageParam> messages) {
+        try {
+            String conversationText = mapper.writeValueAsString(messages);
+            if (conversationText.length() > 80000) {
+                conversationText = conversationText.substring(0, 80000);
+            }
+
+            String prompt = "请总结这段对话以保持上下文连贯性。需要包含：\n" +
+                    "1) 已完成的工作内容\n" +
+                    "2) 当前状态\n" +
+                    "3) 做出的关键决策\n" +
+                    "4) 剩余工作\n" +
+                    "5) 用户约束\n" +
+                    "请简洁明了，但保留关键细节。\n\n" + conversationText;
+
+            Message response = client.messages().create(MessageCreateParams.builder()
+                    .model(model)
+                    .messages(List.of(MessageParam.builder()
+                            .role(MessageParam.Role.USER)
+                            .content(prompt)
+                            .build()))
+                    .maxTokens(2000)
+                    .build());
+
+            return response.content().stream()
+                    .filter(c -> c.isText())
+                    .map(c -> c.text().map(TextBlock::text).orElse(""))
+                    .collect(Collectors.joining("\n"));
+        } catch (Exception e) {
+            return "[摘要生成失败: " + e.getMessage() + "]";
+        }
+    }
+
+    // ============================== 原有方法 ==============================
+
+    /**
+     * L2: micro_compact — 旧 tool_result 替换为占位符（保留最近3条）
      *
      * 功能说明：
      * - 遍历所有消息，收集工具调用和工具结果的位置信息
@@ -44,6 +470,7 @@ public class ContextCompactor {
      *
      * 执行时机：
      * - 每次调用LLM API前自动执行
+     * - 在 snip_compact 和 tool_result_budget 之后执行
      * - 静默执行，对用户透明
      * - 高频执行以控制上下文大小
      *
@@ -189,7 +616,7 @@ public class ContextCompactor {
      * Layer 2: 自动压缩 - 完整对话压缩
      *
      * 功能说明：
-     * - 将完整对话历史保存到磁盘的 .transcript/ 目录
+     * - 将完整对话历史保存到 session 的 transcripts 或磁盘
      * - 请求LLM生成对话摘要（包含已完成的工作、当前状态、关键决策）
      * - 用摘要消息替换原始消息列表，实现上下文压缩
      *
@@ -200,21 +627,46 @@ public class ContextCompactor {
      * @return 压缩后的消息列表（仅包含摘要消息）
      */
     public List<MessageParam> autoCompact(List<MessageParam> messages) {
-        // 【步骤1】保存完整对话记录到磁盘（JSONL格式，每行一个消息）
+        return autoCompact(messages, "auto");
+    }
+
+    /**
+     * Layer 2/3: 完整对话压缩（可指定压缩原因）
+     *
+     * @param messages 原始消息列表
+     * @param reason 压缩原因（auto/manual）
+     * @return 压缩后的消息列表
+     */
+    public List<MessageParam> autoCompact(List<MessageParam> messages, String reason) {
+        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME);
+        int estimatedTokens = estimateTokens(messages);
+        int messageCount = messages.size();
+
+        // 声明 transcriptPath 变量（方法级别）
+        String transcriptPath = null;
+
+        // 【步骤1】保存完整对话记录
+        // 优先使用 SessionManager，如果不可用则保存到磁盘
         try {
-            Path path = Path.of(TRANSCRIPT_DIR);
-            if (!Files.exists(path)) {
-                Files.createDirectories(path);
+            if (sessionManager != null) {
+                // 使用 SessionManager 保存，将在步骤3中添加 transcript 记录
+                transcriptPath = "会话 " + sessionManager.getSessionId() + " 的压缩记录";
+                System.out.println("[准备压缩] 消息数: " + messageCount + ", 估算tokens: " + estimatedTokens);
+            } else {
+                // 保存到磁盘的 .transcripts/ 目录
+                Path path = Paths.get(ROOT, ".transcripts");
+                if (!Files.exists(path)) {
+                    Files.createDirectories(path);
+                }
+                Path filePath = path.resolve("transcript_" + System.currentTimeMillis() + ".jsonl");
+                List<String> lines = new ArrayList<>();
+                for (MessageParam msg : messages) {
+                    lines.add(mapper.writeValueAsString(msg));
+                }
+                Files.write(filePath, lines);
+                transcriptPath = filePath.toString();
+                System.out.println("[对话记录已保存: " + transcriptPath + "]");
             }
-            // 使用时间戳生成唯一的transcript文件名
-            Path transcriptPath = path.resolve("transcript_" + System.currentTimeMillis() + ".jsonl");
-            ObjectMapper mapper = new ObjectMapper();
-            List<String> lines = new ArrayList<>();
-            for (MessageParam msg : messages) {
-                lines.add(mapper.writeValueAsString(msg));
-            }
-            Files.write(transcriptPath, lines);
-            System.out.println("[对话记录已保存: " + transcriptPath + "]");
 
             // 【步骤2】生成对话摘要
             // 将消息列表转换为文本（限制在80000字符以内以避免超出API限制）
@@ -244,7 +696,25 @@ public class ContextCompactor {
                     .map(cb -> cb.text().get().text())
                     .collect(Collectors.joining());
 
-            // 【步骤3】构建压缩后的新消息列表
+            // 【步骤3】将压缩记录保存到 SessionManager（如果可用）
+            if (sessionManager != null) {
+                try {
+                    // 创建 transcript 记录
+                    TranscriptRecord record = TranscriptRecord.builder()
+                            .timestamp(timestamp)
+                            .messageCount(messageCount)
+                            .estimatedTokens(estimatedTokens)
+                            .summary(summary)
+                            .reason(reason)
+                            .build();
+                    sessionManager.recordTranscript(record);
+                    System.out.println("[压缩记录已保存到会话]");
+                } catch (Exception e) {
+                    System.err.println("[压缩记录保存失败] " + e.getMessage());
+                }
+            }
+
+            // 【步骤4】构建压缩后的新消息列表
             // 包含两条消息：用户消息（告知对话已压缩并提供摘要）+ 助手确认消息
             List<MessageParam> newHistory = new ArrayList<>();
             newHistory.add(MessageParam.builder()
@@ -269,9 +739,12 @@ public class ContextCompactor {
      * 保存对话记录到磁盘
      *
      * 功能说明：
-     * - 在 TRANSCRIPT_DIR 目录下创建以时间戳命名的 JSONL 文件
+     * - 在 .transcripts 目录下创建以时间戳命名的 JSONL 文件
      * - 每条消息序列化为JSON后写入一行
      * - JSONL格式便于后续读取和分析
+     *
+     * 注意：虽然 SessionManager 已经存储会话数据，但这里保留磁盘备份
+     * 因为 SessionManager 存储的是压缩后的消息，压缩前的完整对话需要额外保存
      *
      * @param messages 要保存的消息列表
      * @return 保存的文件路径，失败时返回错误标识
@@ -279,7 +752,7 @@ public class ContextCompactor {
     private String saveTranscript(List<MessageParam> messages) {
         try {
             // 创建transcript目录（如果不存在）
-            Path transcriptDir = Paths.get(TRANSCRIPT_DIR);
+            Path transcriptDir = Paths.get(ROOT, ".transcripts");
             Files.createDirectories(transcriptDir);
 
             // 使用时间戳生成唯一文件名：transcript_<时间戳>.jsonl
